update pet and booking